[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter I/Power/PowerPuzzle.gd" type="Script" id=2]
[ext_resource path="res://Resources/Objects/Circuit/PowerProblem.png" type="Texture" id=3]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/HubUi.png" type="Texture" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="PowerPuzzle" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.552941, 0.537255, 0.537255, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 159.866, 89.0861 )
scale = Vector2( 0.469434, 0.469434 )
texture = ExtResource( 4 )

[node name="Power" type="Sprite" parent="." index="3"]
position = Vector2( 112.862, 105.5 )
scale = Vector2( 0.380088, 0.380088 )
texture = ExtResource( 3 )

[node name="InstuctionLabel" type="Label" parent="." index="4"]
margin_left = 28.477
margin_top = 43.1204
margin_right = 217.477
margin_bottom = 57.1204
rect_scale = Vector2( 0.9, 0.9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="." index="5"]
margin_left = 224.196
margin_top = 77.3972
margin_right = 295.196
margin_bottom = 101.397
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="6"]
margin_left = 235.362
margin_top = 110.893
margin_right = 285.362
margin_bottom = 124.893
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="." index="7"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
